# tempo

./: README.md  pyproject.toml
demo/: demo.py
src/tempo/: __init__.py  adaptive.py  clock.py  detector.py  limiters.py
src/tempo_ratelimit.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_adaptive.py  test_clock.py  test_detector.py  test_limiters.py  test_new_features.py
